# Ceigen

./: CMakeLists.txt  EigenCBindingsConfig.h.in  LICENSE  Package.swift  README.md
include/: EigenCBindings.h  EigenDoubleMatrix.h  EigenFloatMatrix.h  EigenIntMatrix.h  EigenMatrix_h  Macros.h
src/: EigenCBindings.cpp  EigenCBindingsTest.c  EigenDoubleMatrix.cpp  EigenFloatMatrix.cpp  EigenIntMatrix.cpp  EigenMatrix_cpp
